<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".FinanceActivity">
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clean"
        android:orderInCategory="100"
        android:title="@string/action_clean"
        app:showAsAction="never"/>
</menu>